Perkin-UAT/force-app/main/default/objects/EmailMessage/fields/fxInitialEmail__c.field-meta.xml
<CustomField>
    <fullName>fxInitialEmail__c</fullName>
    <formula>Parent.SuppliedEmail =  FromAddress &amp;&amp;
 DateTimeCASEOpened__c &lt;= Parent.CreatedDate</formula>
    <label>fxInitialEmail</label>
    <type>Checkbox</type>
</CustomField>