Perkin-UAT/force-app/main/default/objects/EmailMessage/fields/fxToServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>fxToServiceAddress__c</fullName>
    <formula>CONTAINS(&quot;autoconfirmation.cl;chromatographytechsup;ecommerceca;irtechsupport;lasservice;rdtechsupport;techtierone;cloud.alerts.service1;cloud.alerts.service4;cloud.alerts.service2;customercaresa;orders.lscanada;cccotacaodas;customercareca;customercarela;chile.servicesupport;india.servicesupport;autoconfirmation.ca;autoconfirmation.in;autoconfirmation.mx;autoconfirmation.ukie;autoconfirmation.us;cc.ukie;usinstrumentorders;lassheltoncredits;las.sales;dxsupportlatam;ustechsupport@euroimmun.us;software.support.france;software.support.uk;dxsupportamericas;dxsupportemea;dxsupportl3;einvoicing;ecommerce.support.cases;gs.technical.support;gs.customersupport;informatics.customer_service;informatics.support;informatics.managedservices;mexicoinstrumentorders;gctechsupport;n/a;cloud.alerts.service3;specimen.gate.support;specimengatesupportfi;chemagen.support&quot;,

SUBSTITUTE( ToAddress , &quot;@perkinelmer.com&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxToServiceAddress</label>
    <type>Checkbox</type>
</CustomField>