Perkin-UAT/force-app/main/default/objects/EmailMessage/fields/IncorrectEmailToCase__c.field-meta.xml
<CustomField>
    <fullName>IncorrectEmailToCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>emial was not done correct with service address only in To Field</description>
    <label>Incorrect EmailToCase</label>
    <type>Checkbox</type>
</CustomField>